# prp-return-dashboard

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
docs/: app.js  index.html  style.css
docs/assets/: metadata.json  summary.json  trend.json
src/prp_returns/: __init__.py  aggregation.py  build.py  costs.py  features.py  io.py  pairs.py  returns.py
tests/: test_pipeline.py
tools/: audit-dashboard.mjs
